improved layout of demo. removed fluff from demo. added default button style. improved usage of button, use directive instead of classes. fixed alignment issue with dropdown.

--- a/packages/base-ui-theme/components/amd-button.scss
+++ b/packages/base-ui-theme/components/amd-button.scss
@@ -14,12 +14,16 @@
     }
 }
 
-button {
-  &.button-primary {
+.amd-button {
+  &--default {
+    @include colored-button($highlight-text-color, $primary-text-color)
+  }
+
+  &--primary {
     @include colored-button($primary-color, $primary-color-text);
   }
 
-  &.button-secondary {
+  &--secondary {
     @include colored-button($secondary-color, $secondary-color-text);
   }
 }
