--- a/packages/reset-ui-theme/components/amd-button.scss
+++ b/packages/reset-ui-theme/components/amd-button.scss
@@ -1,6 +1,6 @@
 @import '../styles/reset-mixins';
 
-button {
+.amd-button {
 	background: transparent;
 	cursor: pointer;
 	user-select: none;
